[package]
name = "ttycarousel"
version = "0.1.3"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Console animations for Rust"
readme = "README.md"
keywords = ["terminal", "tty", "console", "animation"]
repository = "https://github.com/divi255/ttycarousel"

[package.metadata.docs.rs]
features = ["sync", "tokio1"]

[package.metadata.playground]
features = ["sync", "tokio1"]

[dependencies]
tokio = { version = "1.17.0", features = ["io-std", "io-util", "rt", "time", "sync"], optional = true }
atty = "0.2.14"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }

[lib]
name = "ttycarousel"
path = "src/lib.rs"

[features]
tokio1 = ["tokio"]
sync = []

[[example]]
name = "example"
path = "examples/example.rs"
required-features = ["sync"]

[[example]]
name = "example_async"
path = "examples/example_async.rs"
required-features = ["tokio1"]
